# pymeet-deisgn-pattern-criacional

./: pyproject.toml
abstract_factory/: factory.py  game.py  wizard.py
factory_method/: extractor.py  factory.py  main.py
factory_method/assets/: person.xml
singleton/: database_singleton.py
