[tool.poetry]
name = "pymeet"
version = "0.1.0"
description = ""
authors = ["Weslly Oliveira <weslly99@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.1.2"

[tool.poetry.dev-dependencies]
black = {version = "^22.10.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
